--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-google-recaptcha": "^2.1.5",
     "date-fns": "^2.30.0",
     "next": "13.4.4",
+    "next-redux-wrapper": "^8.1.0",
     "nprogress": "^0.2.0",
     "react": "18.2.0",
     "react-avatar-editor": "^13.0.0",
