--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@radix-ui/react-slider": "^1.1.2",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "20.2.5",
-    "@types/react": "18.2.7",
     "@types/react-datepicker": "^4.11.2",
     "@types/react-dom": "18.2.4",
     "@types/react-google-recaptcha": "^2.1.5",
@@ -38,6 +37,7 @@
   "devDependencies": {
     "@svgr/webpack": "^8.0.1",
     "@types/nprogress": "^0.2.0",
+    "@types/react": "^18.2.13",
     "@types/react-avatar-editor": "^13.0.0",
     "@typescript-eslint/eslint-plugin": "^5.33.1",
     "@typescript-eslint/parser": "^5.33.1",
