--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "lint": "next lint",
     "eslint": "eslint --fix --ext .js,.jsx,.ts,.tsx src"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn eslint"
+    }
+  },
   "dependencies": {
     "@headlessui/react": "^1.7.15",
     "@hookform/resolvers": "^3.1.0",
