--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn eslint"
+      "pre-commit": "yarn run eslint"
     }
   },
   "dependencies": {
