--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "lint-staged": {
     "**/*.{js,ts,jsx,tsx}": [
-      "yarn lint-fix"
+      "npm run lint-fix"
     ]
   },
   "dependencies": {
