--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "copy_instagramm",
   "homepage": ".",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prepare": "husky install",
+    "postinstall": "husky install",
+    "prepack": "pinst --disable",
+    "postpack": "pinst --enable",
     "lint-fix": "eslint --fix"
   },
   "lint-staged": {
@@ -59,6 +61,7 @@
     "eslint-plugin-react": "^7.30.1",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.3",
+    "pinst": "^3.0.0",
     "prettier": "^2.7.1",
     "prettier-config-it-incubator": "^1.0.1",
     "prettier-stylelint": "^0.4.2",
