--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "build:production": "env-cmd -f .env.production yarn build",
+    "build:production": "yarn build",
     "start": "next start",
     "lint": "next lint",
     "postinstall": "husky install",
