feat: Button and Text

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,9 @@
     "paths": {
       "@/*": [
         "./src/*"
+      ],
+      "react": [
+        "./node_modules/@types/react"
       ]
     },
     "plugins": [
