--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@hookform/resolvers": "^3.1.0",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-slider": "^1.1.2",
+    "@react-oauth/google": "^0.11.1",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "20.2.5",
     "@types/react-datepicker": "^4.11.2",
@@ -54,6 +55,7 @@
     "react-intersection-observer": "^9.4.4",
     "react-redux": "^8.0.5",
     "react-toastify": "^9.1.3",
+    "strip-ansi": "6.0.1",
     "typescript": "5.0.4",
     "yup": "^1.2.0"
   },
