--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@hookform/resolvers": "^3.1.0",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-slider": "^1.1.2",
+    "@react-oauth/google": "^0.11.1",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "20.2.5",
     "@types/react-datepicker": "^4.11.2",
