--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "prepack": "pinst --disable",
     "postpack": "pinst --enable",
     "lint-fix": "eslint --fix",
-    "stylelint-fix": "stylelint \"**/*.{css,scss}\" --fix"
+    "stylelint-fix": "stylelint \"**/*.{css,scss}\" --fix",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "lint-staged": {
     "**/*.{css,scss}": [
@@ -57,6 +59,14 @@
     "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "7.3.2",
+    "@storybook/addon-interactions": "7.3.2",
+    "@storybook/addon-links": "7.3.2",
+    "@storybook/addon-onboarding": "1.0.8",
+    "@storybook/blocks": "7.3.2",
+    "@storybook/nextjs": "7.3.2",
+    "@storybook/react": "7.3.2",
+    "@storybook/testing-library": "0.2.0",
     "@svgr/webpack": "^8.0.1",
     "@types/nprogress": "^0.2.0",
     "@types/react": "^18.2.13",
@@ -71,6 +81,7 @@
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-storybook": "^0.6.13",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.3",
     "pinst": "^3.0.0",
@@ -78,6 +89,7 @@
     "prettier-config-it-incubator": "^1.0.1",
     "prettier-stylelint": "^0.4.2",
     "sass": "^1.62.1",
+    "storybook": "7.3.2",
     "stylelint": "^14.10.0",
     "stylelint-config-clean-order": "^0.9.0",
     "stylelint-prettier": "^2.0.0"
