--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-intersection-observer": "^9.4.4",
     "react-redux": "^8.0.5",
     "react-toastify": "^9.1.3",
+    "strip-ansi": "6.0.1",
     "typescript": "5.0.4",
     "yup": "^1.2.0"
   },
@@ -69,7 +70,7 @@
     "@storybook/testing-library": "0.2.0",
     "@svgr/webpack": "^8.0.1",
     "@types/nprogress": "^0.2.0",
-    "@types/react": "^18.2.13",
+    "@types/react": "^18.2.21",
     "@types/react-avatar-editor": "^13.0.0",
     "@typescript-eslint/eslint-plugin": "^5.33.1",
     "@typescript-eslint/parser": "^5.33.1",
