--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/react-google-recaptcha": "^2.1.5",
     "date-fns": "^2.30.0",
     "env-cmd": "^10.1.0",
+    "latest": "^0.2.0",
     "next": "13.4.4",
     "next-redux-wrapper": "^8.1.0",
     "nprogress": "^0.2.0",
@@ -70,7 +71,7 @@
     "@storybook/testing-library": "0.2.0",
     "@svgr/webpack": "^8.0.1",
     "@types/nprogress": "^0.2.0",
-    "@types/react": "^18.2.21",
+    "@types/react": "18.2.2",
     "@types/react-avatar-editor": "^13.0.0",
     "@typescript-eslint/eslint-plugin": "^5.33.1",
     "@typescript-eslint/parser": "^5.33.1",
