--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     }
   },
   "dependencies": {
+    "@alexanderjeurissen/use-storybook": "^2.0.5",
     "@headlessui/react": "^1.7.15",
     "@hookform/resolvers": "^3.1.0",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-slider": "^1.1.2",
     "@react-oauth/google": "^0.11.1",
     "@reduxjs/toolkit": "^1.9.5",
+    "@storybook/icons": "^1.1.6",
     "@types/node": "20.2.5",
     "@types/react-datepicker": "^4.11.2",
     "@types/react-dom": "18.2.4",
@@ -61,13 +63,13 @@
     "yup": "^1.2.0"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "7.3.2",
-    "@storybook/addon-interactions": "7.3.2",
-    "@storybook/addon-links": "7.3.2",
+    "@storybook/addon-essentials": "7.4.0",
+    "@storybook/addon-interactions": "7.4.0",
+    "@storybook/addon-links": "7.4.0",
     "@storybook/addon-onboarding": "1.0.8",
-    "@storybook/blocks": "7.3.2",
-    "@storybook/nextjs": "7.3.2",
-    "@storybook/react": "7.3.2",
+    "@storybook/blocks": "7.4.0",
+    "@storybook/nextjs": "7.4.0",
+    "@storybook/react": "7.4.0",
     "@storybook/testing-library": "0.2.0",
     "@svgr/webpack": "^8.0.1",
     "@types/nprogress": "^0.2.0",
@@ -91,7 +93,7 @@
     "prettier-config-it-incubator": "^1.0.1",
     "prettier-stylelint": "^0.4.2",
     "sass": "^1.62.1",
-    "storybook": "7.3.2",
+    "storybook": "7.4.0",
     "stylelint": "^14.10.0",
     "stylelint-config-clean-order": "^0.9.0",
     "stylelint-prettier": "^2.0.0"
