--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@storybook/addon-designs": "^7.0.5",
     "@storybook/addon-essentials": "7.4.0",
     "@storybook/addon-interactions": "7.4.0",
     "@storybook/addon-links": "7.4.0",
