--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "@radix-ui/react-slider": "^1.1.2",
     "@react-oauth/google": "^0.11.1",
     "@reduxjs/toolkit": "^1.9.5",
-    "@storybook/addon-actions": "^7.4.2",
     "@storybook/icons": "^1.1.6",
     "@types/node": "20.2.5",
     "@types/react-datepicker": "^4.11.2",
@@ -66,10 +65,12 @@
     "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@ecubelabs/storybook-addon-intl": "^2.0.5",
+    "@storybook/addon-actions": "^7.4.2",
     "@storybook/addon-designs": "^7.0.5",
     "@storybook/addon-essentials": "7.4.0",
     "@storybook/addon-interactions": "7.4.0",
-    "@storybook/addon-links": "7.4.0",
+    "@storybook/addon-links": "^7.4.2",
     "@storybook/addon-onboarding": "1.0.8",
     "@storybook/blocks": "7.4.0",
     "@storybook/nextjs": "7.4.0",
@@ -98,6 +99,8 @@
     "prettier-stylelint": "^0.4.2",
     "sass": "^1.62.1",
     "storybook": "7.4.0",
+    "storybook-addon-locale": "^0.3.6",
+    "storybook-addon-mock": "^4.3.0",
     "stylelint": "^14.10.0",
     "stylelint-config-clean-order": "^0.9.0",
     "stylelint-prettier": "^2.0.0"
